Added GET query support for orderList
